--- a/app/src/main/res/layout/banner_layout.xml
+++ b/app/src/main/res/layout/banner_layout.xml
@@ -36,4 +36,11 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:text="@string/banner_ad_desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
