--- a/app/src/main/res/layout/inter_layout.xml
+++ b/app/src/main/res/layout/inter_layout.xml
@@ -39,4 +39,11 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:text="@string/inter_ad_desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
