--- a/app/src/main/res/layout/native_layout.xml
+++ b/app/src/main/res/layout/native_layout.xml
@@ -113,4 +113,11 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:text="@string/native_ad_desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
